# Chess

./: .gitignore  Cargo.toml
.github/workflows/: pages.yml
scripts/: build_pages.sh
src/: app_icon.rs  game.rs  lib.rs  main.rs  search.rs  types.rs  ui_app.rs  web.rs  zobrist.rs
tests/: engine_regression.rs  performance.rs
web/: bootstrap.js  index.html  styles.css
