[package]
name = "chess_engine"
version = "0.1.0"
edition = "2024"
default-run = "chess_engine"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[dependencies]
arrayvec = "0.7.6"
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow"] }
png = "0.18.0"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
